# Maze_Qt

./: README.md  README_RUS.md
src/Maze/: CMakeLists.txt  Makefile  Manual.texi
src/Maze/canvas/: canvascave.cc  canvascave.h  canvasmaze.cc  canvasmaze.h  figure.h  figurefactory.h  figureparams.h  ifigure.cc  ifigure.h  painter.h
src/Maze/controller/: controllercave.cc  controllercave.h  controllerfactory.h  controllermaze.cc  controllermaze.h  icontroller.h
src/Maze/data_maze/: 10x10_20230804_153213
src/Maze/model/: cave.cc  cave.h  cave_data.h  checkmaze.cc  checkmaze.h  filemanager.cc  filemanager.h  generate_maze.cc  maze.cc  maze.h  path.cc  path.h  position.cc  position.h
src/Maze/tests/: CMakeLists.txt  test_cave.cc  test_maze.cc
src/Maze/tests/maze_data_tests/: ideal_4x7  ideal_5x5  not_ideal_5x5_1  not_ideal_5x5_2  ugly_3x4  ugly_4x3  ugly_4x4  ugly_5x5
src/Maze/view/: paintwidget.cc  paintwidget.h  view.cc  view.h  view.ui
